Fix z-index for rest navbar

--- a/app/assets/stylesheets/rest.scss
+++ b/app/assets/stylesheets/rest.scss
@@ -32,7 +32,8 @@
     height: 32px;
     position: sticky;
     top: 0;
-    width: 642px;
+    z-index: 10;
+    width: 612px;
 
     .content-button {
         margin-right: 36px;
